.\advanced_features_and_security\

--- a/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/form_example.html
+++ b/advanced_features_and_security/LibraryProject/bookshelf/templates/bookshelf/form_example.html
@@ -4,3 +4,10 @@
     <input type="text" name="book_name">
     <button type="submit">Submit</button>
 </form>
+
+<h2>Create a New Book</h2>
+<form method="POST" action="{% url 'create_book' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Save</button>
+</form>
